Version 2.4.5
------------------------------------------------------------------
17 October 2008
+ Tweaked the javascript mod force code. Previously would break core
  javascript.

16 October 2008
+ Added LAYOUT_FORCE_MOD_JS define. Forces module javascript usage.

8 September 2008
+ Not caching frontpage title because of array repeat problem.

13 June 2008
+ Added option to use a Key's summary or title to fill in the meta
  description.
+ Updated: templates/metatags.tpl

11 June 2008
+ Added new cacheHeader function to retain javascript and css
  information should a module return cached content before the above
  can be established.

Version 2.4.4
------------------------------------------------------------------
4 June 2008
+ Removed allowUser from database and settings class.

26 May 2008
+ Added collapse function. Adds id="layout-collapse" to theme template
  under the {COLLAPSE} tag.

28 April 2008
+ Changed method of checking for javascript status. Less chance for
  error.
+ Fixed notice.
+ Updated : templates/user_form.tpl

Version 2.4.3
-------------------------------------------------------------------
20 February 2008
+ nakedDisplay now allows a choice whether to use the blank template
  or not when it wraps. Default is to not.

23 January 2008
+ Fixed noCache.

Version 2.4.2
-------------------------------------------------------------------
30 August 2007
+ Rewrote Box settings to Arrange tab.
+ Box move and reset boxes are now links, not form buttons.
+ Additional authorized checks added
+ Updated: remove templates/BoxControl.tpl, add templates/arrange.tpl

27 August 2007
+ addStyle function now allows multiple style sheets per module. Still
  only includes a file once.
+ Increased height of move box popup

22 August 2007
+ Rewrote Layout's move box code. Removed drop down boxes.
+ Updated: conf/error.php, templates/move_box_select.tpl

Version 2.4.1 -- 25 July 2007
-------------------------------------------------------------------
27 June 2007